// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundle android project 1`] = `
"
 INFO  Haul is now bundling your React Native app in production mode.

Starting from:
<<REPLACED>>/fixtures/react-native-generated-project/index.android.js 

[2J[0f DONE  Built successfully!
<<REPLACED>>/fixtures/react-native-generated-project/dist
Bundle location: /Users/thymikee/Projects/callstack-io/haul/integration_tests/fixtures/react-native-generated-project/dist/index.android.bundle
"
`;

exports[`bundle ios project 1`] = `
"
 INFO  Haul is now bundling your React Native app in production mode.

Starting from:
<<REPLACED>>/fixtures/react-native-generated-project/index.ios.js 

[2J[0f DONE  Built successfully!
<<REPLACED>>/fixtures/react-native-generated-project/dist
Bundle location: /Users/thymikee/Projects/callstack-io/haul/integration_tests/fixtures/react-native-generated-project/dist/index.ios.bundle
"
`;
